--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
 	},
 	"homepage": "https://github.com/Ashary-Akhuwat-Foundation/aaf-backend-repo#readme",
 	"dependencies": {
+		"axios": "^1.2.1",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"hbs": "^4.2.0",
 		"lodash": "^4.17.21",
 		"mongoose": "^6.7.5",
 		"mongoose-type-url": "^2.1.0",
-		"nodemo": "^1.0.0",
-		"cors": "^2.8.5"
+		"nodemo": "^1.0.0"
 	},
 	"devDependencies": {
 		"webpack-obfuscator": "^0.17.3"
